cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0
data-dir:           data
extra-source-files: CHANGELOG.md

executable aoc2023
  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    OverloadedStrings

  -- LambdaCase
  -- ScopedTypeVariables
  -- DisambiguateRecordFields

  -- Modules included in this executable, other than Main.
  other-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Paths_aoc2023

  autogen-modules:    Paths_aoc2023
  build-depends:
    , base        ^>=4.17.2.1
    , containers  ^>=0.7

  -- , vector ^>= 0.13
  -- , split ^>=0.2.4
  -- , mtl ^>=2.3.1
  -- , bytestring ^>=0.12
  -- , text ^>=2.1
  -- , unordered-containers

  -- Info about dependencies:
  -- Package `containers`: Brings maps, sets, trees, graphs, sequences.
  -- Package `vector`: Performant, fixed length arrays.
  -- Package `split`: Functions for splitting lists.
  -- Package `mtl`: Monad classes for transformers.

  ghc-options:

  -wall -Wcompat -Widentities -Wincomplete-uni-patterns

  -wincomplete-record-updates -Wredundant-constraints

  -wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  if impl(ghc >=9.0)
    ghc-options: -Winvalid-haddock

  if impl(ghc >=9.2)
    ghc-options: -Wredundant-bang-patterns -Woperator-whitespace

  if impl(ghc >=9.4)
    ghc-options: -Wredundant-strictness-flags
